[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
genawaiter = "0.99.1"
geo = "0.27.0"
heapless = "0.8.0"
itertools = "0.12.0"
num = "0.4.1"
once_cell = "1.18.0"
pathfinding = "4.4.0"
regex = "1.10.2"
stable-pattern = "0.1.0"

[lints.clippy]
single_range_in_vec_init = "allow"
nursery = { level = "warn", priority = -1 }
use_self = "allow"
missing_const_for_fn = "allow"
cast_precision_loss = "allow"
option_if_let_else = "allow"